[gd_scene load_steps=7 format=3 uid="uid://31toqqjcrn7u"]

[ext_resource type="Script" path="res://objects/screen_layers/choose_unit_action/action_panel.gd" id="1_auew0"]
[ext_resource type="PackedScene" uid="uid://cl2erxuk42yq8" path="res://objects/screen_layers/choose_unit_action/action_click_target.tscn" id="2_e6oma"]
[ext_resource type="Texture2D" uid="uid://brkd6gmslwr1s" path="res://objects/screen_layers/choose_unit_action/images/icon_ability.png" id="3_uckx4"]
[ext_resource type="LabelSettings" uid="uid://bh8851qad5fd7" path="res://fonts/label_settings.tres" id="4_wposm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pggq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r3cbw"]

[node name="Ability" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_pggq3")
script = ExtResource("1_auew0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_r3cbw")

[node name="Spacer" type="Control" parent="VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 1

[node name="ClickTarget" parent="VBoxContainer/PanelContainer" instance=ExtResource("2_e6oma")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_uckx4")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ability"
label_settings = ExtResource("4_wposm")
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
